--- a/layouts/_partials/menu.html
+++ b/layouts/_partials/menu.html
@@ -11,7 +11,7 @@ Renders a menu for the given menu ID.
 {{- $menuID := .menuID }}
 
 {{- with index site.Menus $menuID }}
-  <nav>
+  <nav id="sidebar-menu">
     <div class="main-menu-back">
       <a href="#" onclick="unfold('main-menu')"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg> Main menu</a>
     </div>
