--- a/layouts/_partials/menus/section.html
+++ b/layouts/_partials/menus/section.html
@@ -4,5 +4,12 @@ Renders a menu for a given section
 @context {page} page The current page.
 @context {string} menuID The menu ID.
 
-@example: {{ partial "footer_menu.html" (dict "menuID" "footer1" "page" .) }}
+@example: {{ partial "menus/section.html" (dict "section" "docs") }}
 */}}
+
+{{ $page := . }}
+<nav id="sidebar-menu">
+
+
+</nav>
+
