--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -33,6 +33,8 @@
       </div>
     </div>
     {{- else }}
+    <div id="sidebar" class="sidebar">
+    </div>
     {{ block "main" . }}{{ end }}
     {{- end }}
   </main>
