--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -66,4 +66,8 @@ header {
     font-size: 1.25rem;
     text-decoration: none;
     color: var(--header-text-color);
+
+    &:hover {
+        color: var(--primary-color-lighter);
+    }
 }
