--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,15 +1,15 @@
 <div class="footer-link-container">
     <div class="footer-links">
-        {{ partial "footer_menu.html" (dict "menuID" "footer1" "page" .) }}
+        {{ partial "menus/footer.html" (dict "menuID" "footer1" "page" .) }}
     </div>
     <div class="footer-links">
-        {{ partial "footer_menu.html" (dict "menuID" "footer2" "page" .) }}
+        {{ partial "menus/footer.html" (dict "menuID" "footer2" "page" .) }}
     </div>
     <div class="footer-links">
-        {{ partial "footer_menu.html" (dict "menuID" "footer3" "page" .) }}
+        {{ partial "menus/footer.html" (dict "menuID" "footer3" "page" .) }}
     </div>
     <div class="footer-links">
-        {{ partial "footer_menu.html" (dict "menuID" "footer4" "page" .) }}
+        {{ partial "menus/footer.html" (dict "menuID" "footer4" "page" .) }}
     </div>
 </div>
 <div class="footer-bottom">
