--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -10,6 +10,7 @@
     {{ partial "header.html" . }}
   </header>
   <main>
+    <div id="sidebar-background"></div>
     {{ block "main" . }}{{ end }}
   </main>
   <footer>
