--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
-<div id="sidebar" class="sidebar">
-    {{ partial "menus/section.html" (dict "section" "docs" "page" .) }}
+<div>
+{{ partial "menus/section.html" (dict "section" "docs" "page" .) }}
 </div>
 <div class="article-container">
     <div class="article-main">
