--- a/assets/sass/layouts/_article.scss
+++ b/assets/sass/layouts/_article.scss
@@ -22,12 +22,14 @@ main {
 .article-main {
     width: 80%;
     max-width: 1000px;
-    padding-bottom: 20px;
     overflow-x: hidden;
     flex-wrap: 2;
+    margin: 0;
+    padding: 0px 10px 50px 10px;
 
     @media only screen and (max-width: $breakpoint-sm) {
         width: 100%;
+        
     }
 }
 
