--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
-<div id="sidebar" class="sidebar">
-    {{ partial "menus/section.html" (dict "section" "docs" "page" .) }}
+<div>
+{{ partial "menus/section.html" (dict "section" "docs" "page" .) }}
 </div>
 <div class="article-container">
     <div class="article-main">
@@ -9,8 +9,7 @@
       
         {{ .Content }}
         {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
-      
-      
+            
         <p class="text-last-updated">
         {{ $dateMachine := .Lastmod  | time.Format "2006-01-02T15:04:05-07:00" }}
         {{ $dateHuman := .Lastmod  | time.Format ":date_medium" }}
