Fixed dropdown button color

--- a/assets/sass/layouts/_menus.scss
+++ b/assets/sass/layouts/_menus.scss
@@ -243,4 +243,8 @@
     &:hover {
         background-color: var(--sidebar-active-background-color);
     }
+
+    @media only screen and (max-width: $breakpoint-sm) {
+        background-color: var(--sidebar-background-color);
+    }
 }
