--- a/assets/sass/components/_search.scss
+++ b/assets/sass/components/_search.scss
@@ -4,15 +4,9 @@
 
     margin-right: 10px;
 
-    & svg {
-        vertical-align: middle;
-        position: absolute;
-        margin: 2px 10px 0 5px;
-        fill: darkgray;
-    }
-
     & input[type=search] {
 
+        background: url(/search.svg) no-repeat scroll 4px 2px #fff;
         padding: 5px 10px 5px 30px;
         border: 2px solid var(--secondary-color);
         border-radius: 20px;
@@ -34,6 +28,50 @@
         }
 
     }
+}
 
+.search-page-bar {
 
+    width: 100%;
+    display: flex;
+    padding: 50px 20px 30px;
+
+    & svg {
+        position: absolute;
+        vertical-align: middle;
+        margin: 2px 10px 0 5px;
+        fill: darkgray;
+    }
+
+    & form {
+        width: 100%;
+    }
+
+    & input[type=search] {
+
+        background: url(/search.svg) no-repeat scroll 4px 4px #fff;
+        display: block;
+        margin: auto;
+        padding: 5px 10px 5px 30px;
+        border: 2px solid var(--secondary-color);
+        border-radius: 20px;
+        font-family: $font-family-sans;
+        font-size: 1.1rem;
+        width: 90%;
+        transition: width 0.5s ease;
+        max-width: 600px;        
+
+        &:hover {
+            box-shadow: 0px 0px 5px var(--link-color);
+        }
+
+        &:focus {
+            transition: width 0.5s ease;
+            //border: 2px solid var(--link-color);
+            box-shadow: 0px 0px 5px var(--primary-color);
+            border: 0;
+            outline: 0;
+        }
+
+    }
 }
