--- a/assets/sass/layouts/_article.scss
+++ b/assets/sass/layouts/_article.scss
@@ -24,7 +24,7 @@ main {
     max-width: 1000px;
     overflow-x: hidden;
     flex-wrap: 2;
-    margin: 0;
+    margin: auto;
     padding: 0px 10px 50px 10px;
 
     @media only screen and (max-width: $breakpoint-sm) {
