--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -12,6 +12,7 @@
     --primary-color-lighter: #8e47ff;
     //Borders and other UI elements
     --secondary-color:#565656;
+    --secondary-color-lighter:#707070;
 
     //Base colors
     --footer-background-color: #2c2c2c;
