--- a/layouts/_shortcodes/hero.html
+++ b/layouts/_shortcodes/hero.html
@@ -3,6 +3,10 @@ Renders a hero element
 
 @string image Image to display as background.
 @string bgcolor Background color
+@string btn1_href Link for button 1
+@string btn1_text Text for button 1
+@string btn2_href Link for button 2
+@string btn2_text Text for button 2
 */}}
 {{- $obj := . }}
 {{- $style := (dict "background-color" "rgba(0, 0, 0, 0.5)") }}
