--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -6,7 +6,10 @@
     <div class="article-main">
         {{ partial "breadcrumbs.html" . }}
         <h1>{{ .Title }}</h1>
-        {{ .Content }}
+
+        {{ .Content | markdownify }}
+
+        {{ if isset .Params "hidePageList" }}
         <div class="card-container">
         {{ range .Pages }}
             <div class="card-list">
@@ -16,6 +19,7 @@
             </div>
         {{ end }}
         </div>
+        {{ end }}
     </div>
     <div class="article-toc-container">
         {{- $page := . }}
